2005-12-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/bits/errno.h: Define EOWNERDEAD
	and ENOTRECOVERABLE if not already defined.
	* sysdeps/unix/sysv/linux/alpha/bits/errno.h: Likewise.

2005-12-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/Versions: Add new errlist-compat
	entry for up to 138 errnos.

2005-12-27  Jakub Jelinek  <jakub@redhat.com>

	* iconv/gconv_trans.c (__gconv_transliterate): Demangle step __fct
	before calling it.

2005-12-27  David S. Miller  <davem@sunset.davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/Versions: Add new errlist-compat
	entry for up to 134 errnos.

2005-12-26  Ulrich Drepper  <drepper@redhat.com>

	* Versions.def: Add GLIBC_2.4 for libpthread.

2005-12-25  Ulrich Drepper  <drepper@redhat.com>

	* stdlib/Makefile ($(objpfx)isomac.out): Move -I.. to the end so
	that $(..)/bits is not found early.

2005-12-24  Ulrich Drepper  <drepper@redhat.com>

	* manual/errno.texi: Add new Linux errno codes.
	* sysdeps/unix/sysv/linux/Versions: Add new errlist-compat entry
	for up to 132 errnos.
	* sysdeps/unix/sysv/linux/bits/errno.h: Define EOWNERDEAD and
	ENOTRECOVERABLE if not already defined.

2005-12-23  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1566]
	* sysdeps/i386/i586/memusage.h: New file.
	* sysdeps/i386/memusage.h: Don't define GETTIME.

2005-12-22  Ulrich Drepper  <drepper@redhat.com>

	[BZ #1499]
	* misc/syslog.c (SyslogAddr): Use sockaddr_un instead of sockaddr.
	(openlog_internal): Adjust for this change.

	* Makeconfig: Define CXXFLAGS.  Split out warnings from +gccwarn which
	are not understood by the C++ compiler.
	* Makerules: Add rules to build C++ code for test cases.
	* include/stdlib.h: Protect for inclusion in C++ code.
	* include/time.h: Likewise.

2005-12-22  Roland McGrath  <roland@redhat.com>

	* Makerules [gen-as-const-headers] (tests): Add one test per .sym
	file, not just one.
	($(objpfx)test-as-const.c): Target replaced with ...